<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentVolumen">

    <LinearLayout
        android:id="@+id/lUser"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23.3dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_item"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/user" />

        <TextView
            android:id="@+id/tvRutPortico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/body.normal"
            tools:text="15.355.553-2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lPortico"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/rounded_item"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/houses" />

        <TextView
            android:id="@+id/tvPortico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            style="@style/body.normal"
            tools:text="CARMEN VALORADO" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lUser">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lScanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/body.bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/msg_barcode" />

                <LinearLayout
                    android:id="@+id/scanner"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/rounded_item_gray"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="17dp"
                        android:background="@drawable/camera" />

                    <TextView
                        style="@style/body.normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="7.7dp"
                        android:text="@string/scan" />

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/edtBarcode"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_item"
                android:enabled="false"
                android:gravity="center"
                tools:text="21522135121335312" />

            <LinearLayout
                android:id="@+id/lSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/body.bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/msg_size" />

                <LinearLayout
                    android:id="@+id/lRequestSizes"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="80dp"
                    android:background="@drawable/rounded_item_gray"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/box" />

                    <TextView
                        style="@style/body.normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="18.3dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/size" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lSizes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6.3dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/body.normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/high" />

                    <EditText
                        android:id="@+id/edtHigh"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_item"
                        android:enabled="false"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        tools:text="120.1231231231313" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6.3dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/body.normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/longg" />

                    <EditText
                        android:id="@+id/edtLong"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_item"
                        android:enabled="false"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        tools:text="120.1231231231313" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6.3dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/body.normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/width" />

                    <EditText
                        android:id="@+id/edtWidth"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_item"
                        android:enabled="false"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        tools:text="120.1231231231313" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/body.normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/volume" />

                    <EditText
                        android:id="@+id/edtVolume"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_item"
                        android:enabled="false"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        tools:text="120.1231231231313"/>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/imgResult"
                android:layout_width="360dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSend"
                    style="@style/button"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/btnSend" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSendNull"
                    style="@style/button"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:text="@string/btnSendNull" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>